blog post Comment on click expand fix, blog post like count  show fix

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -101,7 +101,7 @@
                 <div *ngIf="post?.description" (click)="openPostDetailDialog(post)">
                     <p [innerHTML]="post?.description.substring(0, 200)"></p><span><a>Read more..</a></span>
                 </div>
-                <div *ngIf="post.id">
+                <div *ngIf="post">
                     <post-status [blogPost]="post"></post-status>
                     <blogpost-comment [blogPost]="post"></blogpost-comment>
                 </div>
