Like and comnment submit fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -18,7 +18,7 @@
     border-bottom: 1px solid ;
 }*/
 .profile-leftmenu > li > a {
-    color: #cecaca;
+    color: #615959;
 }
 .profile-leftmenu > li > a>span{
     font-weight:bold;
