Banner image changed size, profile on nav hover fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.css
@@ -1,6 +1,7 @@
 ﻿    /*======set back ground for question home page.=======*/
     .navbar-right {
         padding-right:10px;
+        position:relative;
     }
 
 
