akash:vlog fixd with description

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -68,8 +68,8 @@
         </div>
 
     </div>
-    <div><img class="profile-image" src="../../../../profile/{{blog?.userViewModel?.imageUrl}}" /></div>
-    <h1>{{blog?.userViewModel?.name}}</h1>
+    <div><img class="profile-image" src="../../../../profile/{{blog?.user?.imageUrl}}" /></div>
+    <h1>{{blog?.user?.name}}</h1>
     <div class="txt-small-grey">Write post</div>
     <form (ngSubmit)="saveBlogPost()" #blogPostForm="ngForm">
         <div class="blog-post">
