Prfile page top spacing, quesation header hover, Italic remove from user name,Direct Question Show

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile.less
@@ -9,14 +9,11 @@
     list-style: none;
 }
 .profile-leftmenu li{
-    margin-bottom:5px;
+    margin-bottom:10px;
 }
 .border-top-grey{
     border-top:1px solid #eeeeee;
 }
-/*.profile-leftmenu > li:focus {
-    border-bottom: 1px solid ;
-}*/
 .profile-leftmenu > li > a {
     color: #615959;
 }
@@ -26,7 +23,7 @@
 .link-with-number{
     display: block;
 }
-.profile-leftmenu > li > a:focus {
+.profile-leftmenu > li > a:focus,.profile-leftmenu > li > a:hover {
     border-bottom: 1px solid #ffd800;
     background-color:#f4f4f4
 }
