--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -76,7 +76,7 @@ p {
     font-family: myriadpro-regular;
     margin: 0;
     overflow: hidden;
-    color: #7b7474;
+    color: black;
 }
 
 .article-footer {
