--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -14,9 +14,9 @@
            
                 <img class="user-image img-circle" src="../../../../profile/{{topFiveUser?.imageUrl}}" (mouseover)='userover(topFiveUser?.id)' [popover]="userInfoDetailsPopoveruser" [popoverOnHover]="true" [popoverCloseOnClickOutside]="true"/>
                 <div class="top-user-info">
-                    <!--<a [routerLink]="['/dashboard/viewprofile/user-question',credential.id]"> {{topFiveUser?.name}}</a>-->
+                    <a [routerLink]="['/dashboard/viewprofile/',topFiveUser.userid,'user-question']"> {{topFiveUser?.name}}</a>
 
-                    {{topFiveUser?.name}}
+                    <!--{{topFiveUser?.name}}-->
                     <span *ngIf="topFiveUser.occupation">,{{topFiveUser.occupation}}</span>
                     <div>{{topFiveUser.profileViewCount}} vistas</div>
                 </div>
