--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -1,6 +1,4 @@
-﻿
-
-<div class="navbar navbar-inverse navbar-fixed-top z-header backgroundset" [ngClass]="className">
+﻿<div class="navbar navbar-inverse navbar-fixed-top z-header backgroundset" [ngClass]="className">
     <ap-search placeBottom="top-fixed"></ap-search>
     <div class="navbar-header">
         <div asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand logo">
@@ -26,7 +24,6 @@
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
                         <div class="lef-column padding-middle"><span class="fa fa-user"></span> <a [routerLink]="['/dashboard/viewprofile',_logObj.user.userid]" for="contain" data-toggle="dropdown" class="padding-middle"> Profile</a></div>
-
                     </div>
 
                     <div class="form-group">
