--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/Category/DeleteCategory.cshtml
@@ -8,6 +8,15 @@
     .table {
         margin-left: 244px;
     }
+
+    /*.table-responsive {
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 349px;
+    }*/
+    .table-responsive {
+        width: 605px;
+    }
 </style>
 
 <div class="row">
@@ -16,46 +25,48 @@
     </div>
     <div class="col-md-4">
         <div class="panel-body">
-
-            <table class="table table-bordered table-striped" id="myTable">
-                <thead>
-                    <tr>
-                        <th style="width:1%">
-                            CategoryName
-                        </th>
-                        <th style="width:10%">
-                            Action
-                        </th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped" id="myTable">
+                    <thead>
                         <tr>
-                            <td>
-                                @Html.HiddenFor(modelItem => item.Id)
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                <button id="btnDelete" type="button" class="btn btn-danger" onclick="DeleteCategory(this,'@item.Id','@item.Name')">
-                                    DeleteCategory
-                                </button>
-                            </td>
+                            <th style="width:1%">
+                                CategoryName
+                            </th>
+                            <th style="width:10%">
+                                Action
+                            </th>
 
                         </tr>
-                    }
-                </tbody>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.HiddenFor(modelItem => item.Id)
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    <button id="btnDelete" type="button" class="btn btn-danger" onclick="DeleteCategory(this,'@item.Id','@item.Name')">
+                                        DeleteCategory
+                                    </button>
+                                </td>
 
-            </table>
+                            </tr>
+                        }
+                    </tbody>
+
+                </table>
+            </div>
 
         </div>
     </div>
 </div>
 <script>
     function DeleteCategory(element, categoryId, categoryName) {
-        var confrimDelete = confirm("Do you really want to delete?");
-        if (confrimDelete == true) {
+
+        alertify.confirm("Do you really want to delete?", function () {
+            //user clicked "ok"
             var url = '@Url.Action("DeleteCategory", "Category", new { Area = "Admin" })';
             var obj = {};
             obj.categoryId = categoryId;
@@ -67,14 +78,24 @@
                 async: false,
                 success: function (respText) {
                     console.log(respText);
-                    alert(categoryName + ' deleted successfully');
-                    location.reload(true);
+                    alertify.alert(categoryName + ' deleted successfully',
+                        function () {
+                            location.reload(true);
+                        });
+
                 },
                 error: function (jqXhr, textStatus, errorThrown) {
 
                 }
             });
-        }
+
+        }, function () {
+            // user clicked "cancel"
+        });
+        //var confrimDelete = confirm("Do you really want to delete?");
+        //if (confrimDelete == true) {
+
+        // }
 
     }
 </script>
