--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -30,7 +30,7 @@
 </style>
 <form #answerVM="ngForm" class="form-horizontal " role="form">
     <div class="modal-header">
-        <h1>&iquest;{{question.title}}?</h1>
+        <h1>{{question.title}}</h1>
         <div class="row">
             <div class="img-container" *ngIf="!isAnonymous">
                 <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
